add exchange wrapper for multiple instruments

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Test Config",
+            "name": "Test config",
             "program": "${workspaceFolder}/bin/orderbook_test",
             "args": [],
             "cwd": "${workspaceFolder}"
